--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,12 @@
 ﻿{
   "$schema": "https://raw.githubusercontent.com/bsmg/BSIPA-MetadataFileSchema/master/Schema.json",
-  "id": "bHapticsFunctional",
-  "name": "bHapticsFunctional",
+  "id": "OwoFunctional",
+  "name": "OwoFunctional",
   "author": "Florian Fahrenberger",
-  "version": "1.1.4",
-  "description": "Adds functional (saber, notes, bombs, walls, ...) bhaptics haptic feedback support to Beat Saber",
-  "gameVersion": "1.21.0",
+  "version": "1.0.0",
+  "description": "Adds functional (saber, notes, bombs, walls, ...) Owo haptic feedback support to Beat Saber",
+  "gameVersion": "1.25.0",
   "dependsOn": {
-    "bHaptics":  "^1.4.18",
     "BSIPA": "^4.2.2"
   }
 }
